crates/hwledger-user-story-macros/tests/trybuild/bad_family.stderr
error: [user_story_test] family 'android' must be one of cli|gui|streamlit|k6|other
  --> tests/trybuild/bad_family.rs:3:1
   |
 3 | / #[user_story_test(yaml = r#"
 4 | | journey_id: ok-id
 5 | | title: "bad family"
 6 | | persona: x
...  |
11 | | family: android
12 | | "#)]
   | |____^
   |
   = note: this error originates in the attribute macro `user_story_test` (in Nightly builds, run with -Z macro-backtrace for more info)
